Fixing board alignment

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -25,7 +25,6 @@ li {
 .column .tictactoebackground {
     background-color: #4679BD;
     border-radius: 10px;
-    margin-left: 300px;
     padding: 5px;
 }
 
